Add recipe page content for a crustless quiche

--- a/recipes/crustless-quiche.html
+++ b/recipes/crustless-quiche.html
@@ -6,7 +6,29 @@
 </head>
 <body>
 	<a href='../index.html'>Home</a>
+
 	<h1>Crustless Spinach Quiche</h1>
 
+	<img src="crustless-spinach-quiche.jpg" alt='A slice of crustless spinach quiche' width="300">
+
+	<h2>Description</h2>
+	<p>Easy to make, taking less than an hour, this light and tasty quiche is perfect for brunch.</p>
+
+	<h2>Ingredients</h2>
+	<ul>
+		<li>Eggs</li>
+		<li>Spinach</li>
+		<li>Onion</li>
+		<li>Cheese</li>
+		<li>Salt</li>
+		<li>Pepper</li>
+	</ul>
+
+	<h2>Steps</h2>
+	<ol>
+		<li>Cook the onion and spinach.</li>
+		<li>Whisk the eggs and seasonings, then stir in vegetables.</li>
+		<li>Pour mixture into a greased dish and cook until quiche is firm.</li>
+	</ol>
 </body>
 </html>
