--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<a href='recipes/crustless-quiche.html'>Crustless Spinach Quiche</a>
+		<a href="recipes/chocolate-cake.html">Chocolate Cake</a>
+		<a href="recipes/meatballs.html">Meatballs</a>
 	</body>
 	</html>
