Update to free recipe pictures

--- a/recipes/crustless-quiche.html
+++ b/recipes/crustless-quiche.html
@@ -9,7 +9,7 @@
 
 	<h1>Crustless Spinach Quiche</h1>
 
-	<img src="crustless-spinach-quiche.jpg" alt='A slice of crustless spinach quiche' height="300">
+	<img src="crustless-spinach-quiche.jpg" alt='A slice of spinach quiche on a plate' height="300">
 
 	<h2>Description</h2>
 	<p>Easy to make, taking less than an hour, this light and tasty quiche is perfect for brunch.</p>
