--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -9,7 +9,7 @@
 
 	<h1>Meatballs</h1>
 
-	<img src="meatballs.jpg" alt='A plateful of meatballs garnished with flat leaf parsley' height="300">
+	<img src="meatballs.jpg" alt='A plateful of meatballs covered in a tomato sauce' height="300">
 
 	<h2>Description</h2>
 	<p>Thes meatballs are juicy, tender, and full of flavor.</p>
