--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<DOCTYPE html>
-	<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Project: Recipes | The Odin Project</title>
-	</head>
-	<body>
-		<h1>Odin Recipes</h1>
-		<a href='recipes/crustless-quiche.html'>Crustless Spinach Quiche</a>
-		<a href="recipes/chocolate-cake.html">Chocolate Cake</a>
-		<a href="recipes/meatballs.html">Meatballs</a>
-	</body>
-	</html>
+	<DOCTYPE html>
+		<html lang="en">
+		<head>
+			<meta charset="utf-8">
+			<title>Project: Recipes | The Odin Project</title>
+		</head>
+		<body>
+			<h1>Odin Recipes</h1>
+			<ul>
+				<li><a href='recipes/crustless-quiche.html'>Crustless Spinach Quiche</a></li>
+				<li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
+				<li><a href="recipes/meatballs.html">Meatballs</a></li>
+			</ul>
+		</body>
+		</html>
