--- a/recipes/crustless-quiche.html
+++ b/recipes/crustless-quiche.html
@@ -3,32 +3,37 @@
 <head>
 	<meta charset="utf-8">
 	<title>Crustless Spinach Quiche</title>
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 	<a href='../index.html'>Home</a>
 
-	<h1>Crustless Spinach Quiche</h1>
+	<div class="container">
 
-	<img src="crustless-spinach-quiche.jpg" alt='A slice of spinach quiche on a plate' height="300">
+		<h1>Crustless Spinach Quiche</h1>
 
-	<h2>Description</h2>
-	<p>Easy to make, taking less than an hour, this light and tasty quiche is perfect for brunch.</p>
+		<img src="crustless-spinach-quiche.jpg" alt='A slice of spinach quiche on a plate' height="300">
 
-	<h2>Ingredients</h2>
-	<ul>
-		<li>Eggs</li>
-		<li>Spinach</li>
-		<li>Onion</li>
-		<li>Cheese</li>
-		<li>Salt</li>
-		<li>Pepper</li>
-	</ul>
+		<h2>Description</h2>
+		<p>Easy to make, taking less than an hour, this light and tasty quiche is perfect for brunch.</p>
 
-	<h2>Steps</h2>
-	<ol>
-		<li>Cook the onion and spinach.</li>
-		<li>Whisk the eggs and seasonings, then stir in vegetables.</li>
-		<li>Pour mixture into a greased dish and cook until quiche is firm.</li>
-	</ol>
+		<h2>Ingredients</h2>
+		<ul>
+			<li>Eggs</li>
+			<li>Spinach</li>
+			<li>Onion</li>
+			<li>Cheese</li>
+			<li>Salt</li>
+			<li>Pepper</li>
+		</ul>
+
+		<h2>Steps</h2>
+		<ol>
+			<li>Cook the onion and spinach.</li>
+			<li>Whisk the eggs and seasonings, then stir in vegetables.</li>
+			<li>Pour mixture into a greased dish and cook until quiche is firm.</li>
+		</ol>
+
+	</div>
 </body>
 </html>
