--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -3,36 +3,41 @@
 <head>
 	<meta charset="utf-8">
 	<title>Meatballs</title>
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 	<a href='../index.html'>Home</a>
 
-	<h1>Meatballs</h1>
+	<div class="container">
 
-	<img src="meatballs.jpg" alt='A plateful of meatballs covered in a tomato sauce' height="300">
+		<h1>Meatballs</h1>
 
-	<h2>Description</h2>
-	<p>Thes meatballs are juicy, tender, and full of flavor.</p>
+		<img src="meatballs.jpg" alt='A plateful of meatballs covered in a tomato sauce' height="300">
 
-	<h2>Ingredients</h2>
-	<ul>
-		<li>1kg mince</li>
-		<li>1 cup grated cheese</li>
-		<li>2 eggs</li>
-		<li>2 cloves garlic, minced</li>
-		<li>1 1/2 tbsp chopped Italian flat leaf parsley</li>
-		<li>salt and pepper to taste</li>
-		<li>2 cups bread crumbs</li>
-		<li>1 1/2 cup lukewarm water</li>
-		<li>1 cup olive oil</li>
-	</ul>
+		<h2>Description</h2>
+		<p>Thes meatballs are juicy, tender, and full of flavor.</p>
 
-	<h2>Steps</h2>
-	<ol>
-		<li>Mix together mince, cheese, eggs, garlic, parsley, salt, and pepper in a bowl.</li>
-		<li>Add the breadcrumbs and slowly mix in water.</li>
-		<li>Shape the mixture into meatballs.</li>
-		<li>Fry the meatballs in the oil until they are brown and crisp.</li>
-	</ol>
+		<h2>Ingredients</h2>
+		<ul>
+			<li>1kg mince</li>
+			<li>1 cup grated cheese</li>
+			<li>2 eggs</li>
+			<li>2 cloves garlic, minced</li>
+			<li>1 1/2 tbsp chopped Italian flat leaf parsley</li>
+			<li>salt and pepper to taste</li>
+			<li>2 cups bread crumbs</li>
+			<li>1 1/2 cup lukewarm water</li>
+			<li>1 cup olive oil</li>
+		</ul>
+
+		<h2>Steps</h2>
+		<ol>
+			<li>Mix together mince, cheese, eggs, garlic, parsley, salt, and pepper in a bowl.</li>
+			<li>Add the breadcrumbs and slowly mix in water.</li>
+			<li>Shape the mixture into meatballs.</li>
+			<li>Fry the meatballs in the oil until they are brown and crisp.</li>
+		</ol>
+
+	</div>
 </body>
 </html>
