--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Project: Recipes | The Odin Project</title>
+			<link rel="stylesheet" href="./styles/style.css">
 		</head>
 		<body>
 			<h1>Odin Recipes</h1>
-			<ul>
-				<li><a href='recipes/crustless-quiche.html'>Crustless Spinach Quiche</a></li>
-				<li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
-				<li><a href="recipes/meatballs.html">Meatballs</a></li>
-			</ul>
+			<div class="container">
+				<nav class='menu'>
+					<ul>
+						<li><a href='recipes/crustless-quiche.html'>Crustless Spinach Quiche</a></li>
+						<li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
+						<li><a href="recipes/meatballs.html">Meatballs</a></li>
+					</ul>
+				</nav>
+			</div>
 		</body>
 		</html>
